<resources>
    <string name="app_name">Kalkulator Zakat Emas</string>
    <string name="selamatdatang">Selamat Datang di Kalkulator Zakat Emas</string>
    <string name="intro">Kalkulator zakat emas dapat membantu seorang muslim dalam menghitung berapa uang rupiah yang harus dikeluarkan untuk zakat pertahunnya</string>
    <string name="beratEmas">Masukan Berat Emas (gram)</string>
    <string name="hitung">Hitung</string>
    <string name="reset">Reset</string>
    <string name="validasi_berat">Berat tidak boleh kosong</string>
    <string name="hasilZakat1">Jumlah rupiah yang harus dikeluarkan adalah : %1$s</string>
    <string name="header">Apa itu zakat?</string>
    <string name="about">Zakat adalah bagian tertentu dari harta yang wajib dikeluarkan oleh setiap muslim apabila telah mencapai syarat yang ditetapkan.Sebagai salah satu rukun Islam, Zakat ditunaikan untuk diberikan kepada golongan yang berhak menerimanya (asnaf).\n\nZakat berasal dari bentuk kata zaka yang berarti suci, baik, berkah, tumbuh, dan berkembang. Dinamakan zakat, karena di dalamnya terkandung harapan untuk memperoleh berkah, membersihkan jiwa dan memupuknya dengan berbagai kebaikan (Fikih Sunnah, Sayyid Sabiq: 5)</string>
    <string name="kosong">Belum ada data</string>
    <string name="tentang_zakat">Tentang Zakat</string>
    <string name="riwayat">Riwayat</string>
    <string name="berat_args_1_s">Berat Gram Emas nya adalah : %1$s Gram</string>
    <string name="zakat_args">Zakat yang perlu dikeluarkan: Rp.%1$s</string>
    <string name="bagikan">Berat Emas : %1$s gram\n Zakat yang harus dikeluarkan Rp.%1$s</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="title_orang">Orang-orang yang harus mengeluarkan zakat</string>
    <string name="islam">Islam</string>
    <string name="tentang_orang">Syarat orang yang mengeluarkan zakat</string>
    <string name="koneksi_hilang">Koneksi Error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update Data</string>

    <string name="notif_title">Ahlan Wa Sahlan</string>
    <string name="notif_text">Selamat datang di Aplikasi Kalkulator Zakat Emas</string>

</resources>